--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.0.0"
+    "express": "4.0.0"
   },
   "engines": {
     "node": "0.10.x"
